--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Assets\Editor\CharacterCustomizationEditor.cs" />
     <Compile Include="Assets\Custom Assets\StarterAssets\Editor\StarterAssetsDeployMenu.cs" />
     <Compile Include="Assets\Custom Assets\StarterAssets\Editor\ThirdPersonStarterAssetsDeployMenu.cs" />
+    <Compile Include="Assets\Editor\ItemDropEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Custom Assets\StarterAssets\Editor\PackageChecker\StarterAssetsPackageChecker.dll" />
