--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,6 @@ FodyWeavers.xsd
 Library/ArtifactDB
 Library/PackageCache/com.unity.burst@1.6.4/.Runtime/hostmac/lld
 Library/PlayerDataCache/Win64/Data/*.assets.resS
+
+Temp/
+Builds/
